fix icon style opacity on mobile

--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -113,10 +113,14 @@
         transition: all .3s ease-out;
       }
       &:hover i {
-        opacity: 0;
+        @include lg {
+          opacity: 0;
+        }
       }
       &:hover::after {
-        opacity: 1;
+        @include lg {
+          opacity: 1;
+        }
       }
     }
   }
